--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/eslint-config-typescript": "^14.5.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
+    "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
     "sass-embedded": "^1.85.1",
     "scss": "^0.2.4",
