--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "mercury-ui",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/mercury-ui.umd.cjs",
+  "module": "./dist/mercury-ui.js",
+  "exports": {
+    ".": {
+      "import": "./dist/mercury-ui.js",
+      "require": "./dist/mercury-ui.umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -38,6 +48,7 @@
     "scss": "^0.2.4",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
+    "vite-plugin-dts": "^4.5.3",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.8",
     "vue-tsc": "^2.2.8"
